[package]
name = "fas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
fascript = { path = "../fascript" }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
