[package]
name = "fascript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
lazy_static = "1.4.0"
pest = "2.7.1"
pest_derive = "2.7.1"
tokio = { version = "1.34.0", features = ["sync"] }

[dev-dependencies]
rand = "0.8.5"
