[package]
name = "fascript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
chrono = "0.4.31"
cranelift = "0.103.0"
#cranelift-codegen = "0.103.0"
cranelift-jit = "0.103.0"
cranelift-module = "0.103.0"
cranelift-native = "0.103.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
lazy_static = "1.4.0"
pest = "2.7.1"
pest_derive = "2.7.1"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["sync", "time"] }
wasmtime = "17.0.1"

[dev-dependencies]
rand = "0.8.5"
